<resources>
    <string name="app_name">NomBook</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favourites">Favourites</string>
    <string name="action_favorite">Favourite</string>
    <string name="action_search">Search</string>
    <string name="action_back">Back</string>

    <!-- Main Activity -->
    <string name="search_hint">Search for recipes</string>

    <!-- Home Screen -->
    <string name="surprise_me">Surprise Me!</string>
    <string name="home_title_text">Recommended Recipes</string>
    <string name="recipe_picture_content_description">Recipe Picture</string>

    <!-- Search Screen -->
    <string name="search_title_text">Search Results</string>

    <!-- Favorites Screen -->
    <string name="favorites_text">My Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="favorite_image">Favorite</string>
</resources>
