<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jenzhouu.nombook.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_recipe_details"
            app:destination="@id/navigation_recipe_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.jenzhouu.nombook.ui.searchresults.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.jenzhouu.nombook.ui.favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_recipe_details"
        android:name="com.jenzhouu.nombook.ui.recipedetails.RecipeDetailsFragment"
        android:label="fragment_navigation_recipe_details"
        tools:layout="@layout/fragment_recipe_details" />
</navigation>