<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_search_view_margin_start"
            android:layout_marginTop="@dimen/home_search_view_margin_top"
            android:layout_marginEnd="@dimen/home_search_view_margin_end"
            android:layout_marginBottom="@dimen/home_search_view_margin_bottom"
            android:background="@drawable/search_border"
            android:fontFamily="@font/cairo_regular"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_hint"
            android:textSize="@dimen/home_search_view_text_size" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="65dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/randomize_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/coral"
                    android:fontFamily="@font/cairo_regular"
                    android:paddingStart="@dimen/home_randomize_button_padding"
                    android:paddingEnd="@dimen/home_randomize_button_padding"
                    android:text="@string/surprise_me"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/home_surprise_me_button_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_title_text_margin_start"
                    android:layout_marginTop="@dimen/home_title_text_margin_top"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/home_title_text"
                    android:textSize="@dimen/home_title_text_size"
                    app:layout_constraintBottom_toTopOf="@id/recycler_view"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/randomize_button" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/home_progress_bar_margin"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_text" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/home_rv_margin_start"
                    android:layout_marginTop="@dimen/home_rv_margin_top"
                    android:layout_marginEnd="@dimen/home_rv_margin_end"
                    android:background="@drawable/square_border_coral"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>